feat. 전체조회 응답 수정